--- a/product-managment-service/src/main/resources/application.properties
+++ b/product-managment-service/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.username=root
 spring.datasource.password=DatabaseBackendDev0912
 spring.jpa.show-sql=true
 spring.application.name=product-management-service
+server.port= 8081
+
+info.app.name= Product Management Service
+info.app.version= 1.0
+
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=health,prometheus
