Bug Fixes WebScrapper

--- a/web-scrapping-service/src/main/resources/application.properties
+++ b/web-scrapping-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name= webscrapping-service
+spring.application.name= web-scrapping-service
 server.port=8084
 
 amazon-url: https://www.amazon.com/
