Refactored APIs to better address status of response + System Logs are now saved in file + pagination to all getAll apis + delet-product api now active

--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port=8761
 eureka.client.fetch-registry= false
 eureka.client.register-with-eureka= false
+
+logging.file.name=discovery-server.log
+logging.file.path=*
