--- a/product-managment-service/src/main/resources/application.properties
+++ b/product-managment-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/product_service_database
+spring.datasource.url=jdbc:mysql://localhost:3306/product_management_service_database
 spring.datasource.username=root
 spring.datasource.password=DatabaseBackendDev0912
 spring.jpa.show-sql=true
@@ -11,3 +11,6 @@ info.app.version= 1.0
 
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=health,prometheus
+
+logging.file.name=product-management-service.log
+logging.file.path=*
