--- a/product-color-management-service/src/main/resources/application.properties
+++ b/product-color-management-service/src/main/resources/application.properties
@@ -9,5 +9,5 @@ server.port= 8085
 info.app.name= Product Color Management Service
 info.app.version= 1.0
 
-logging.file.name=product-color-management-service
+logging.file.name=product-color-management-service.log
 logging.file.path=*
