--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /discovery-server/discovery-server.log
 /product-management-service/product-management-service.log
 /product-color-management-service/product-color-management-service.log
+/product-category-management-service/product-category-management-service.log
