--- a/amazon-s3-service/src/main/resources/application.properties
+++ b/amazon-s3-service/src/main/resources/application.properties
@@ -6,4 +6,10 @@ cloud.aws.region.static= ap-northeast-1
 cloud.aws.stack.auto= false
 application.bucket.name= easy-electro-shop-models
 
+info.app.name= AMAZON S3 Service
+info.app.version= 1.0
+
+logging.file.name=amazon-s3-service.log
+logging.file.path=*
+
 server.port=8082
