Update to product + web scrapper

--- a/product-category-management-service/src/main/resources/application.properties
+++ b/product-category-management-service/src/main/resources/application.properties
@@ -9,5 +9,5 @@ server.port= 8086
 info.app.name= Product Category Management Service
 info.app.version= 1.0
 
-logging.file.name=product-category-management-service.log
-logging.file.path=*
+#logging.file.name=product-category-management-service.log
+#logging.file.path=*
