--- a/web-scrapping-service/src/main/resources/application.properties
+++ b/web-scrapping-service/src/main/resources/application.properties
@@ -1,7 +1,21 @@
 spring.application.name= web-scrapping-service
 server.port=8084
 
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/web_scrapping_service_database
+spring.datasource.username=root
+spring.datasource.password=DatabaseBackendDev0912
+spring.jpa.show-sql=true
+
 amazon-url: https://www.amazon.com/
 daraz-url: https://www.daraz.pk/
 
 currency-exchange-access-key: JcR8x7H6WHAEHPhhPlMhhml97s3Qg9Pt
+
+
+info.app.name= Web Scrapping Service
+info.app.version= 1.0
+
+
+#logging.file.name=web-scrapping-service.log
+#logging.file.path=*
