--- a/web-scrapping-service/pom.xml
+++ b/web-scrapping-service/pom.xml
@@ -58,6 +58,19 @@
             <version>6.0.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
