--- a/admin-managment-service/src/main/resources/application.properties
+++ b/admin-managment-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=product-service
+spring.application.name= admin-managment-service
 server.port=8083
 spring.servlet.multipart.max-file-size =-1
 spring.servlet.multipart.max-request-size =-1
