--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=product-service
 server.port=8083
-
+spring.servlet.multipart.max-file-size =-1
+spring.servlet.multipart.max-request-size =-1
 #logging.file.name=product-service.log
 #logging.file.path=*
