--- a/web-scrapping-service/src/main/resources/application.properties
+++ b/web-scrapping-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name= web-scrapping-service
-server.port=8084
+server.port=8090
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/web_scrapping_service_database
@@ -15,6 +15,9 @@ currency-exchange-access-key: JcR8x7H6WHAEHPhhPlMhhml97s3Qg9Pt
 
 info.app.name= Web Scrapping Service
 info.app.version= 1.0
+
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
 
 
 #logging.file.name=web-scrapping-service.log
