Added a Configuration Server

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -10,3 +10,6 @@ server.port=8080
 spring.cloud.gateway.routes[0].id = PRODUCT-SERVICE
 spring.cloud.gateway.routes[0].uri = lb://PRODUCT-SERVICE
 spring.cloud.gateway.routes[0].predicates[0] = Path=/api/v1/product/**
+
+
+spring.config.import= configserver:http://localhost:8090
