--- a/amazon-s3-service/src/main/resources/application.properties
+++ b/amazon-s3-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8082
 spring.application.name= amazon-s3-service
 spring.servlet.multipart.max-file-size =-1
 spring.servlet.multipart.max-request-size =-1
@@ -11,9 +12,10 @@ info.app.name= AMAZON S3 Service
 info.app.version= 1.0
 
 management.endpoint.health.show-details=always
+
 management.endpoints.web.exposure.include=*
 
+spring.config.import= configserver:http://localhost:8090
 #logging.file.name=amazon-s3-service.log
 #logging.file.path=*
 
-server.port=8082
