--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -37,7 +37,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
-<!--        <dependency>-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
+        <!--        <dependency>-->
 <!--            <groupId>com.okta.spring</groupId>-->
 <!--            <artifactId>okta-spring-boot-starter</artifactId>-->
 <!--            <version>2.1.6</version>-->
