--- a/web-scrapping-service/src/main/resources/application.properties
+++ b/web-scrapping-service/src/main/resources/application.properties
@@ -16,9 +16,12 @@ currency-exchange-access-key: JcR8x7H6WHAEHPhhPlMhhml97s3Qg9Pt
 info.app.name= Web Scrapping Service
 info.app.version= 1.0
 
+#Check if the below can be taken to config server
 management.endpoint.health.show-details=always
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=* 
 
 
 #logging.file.name=web-scrapping-service.log
 #logging.file.path=*
+
+spring.config.import= configserver:http://localhost:8090
