--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -13,3 +13,5 @@ management.endpoints.web.exposure.include=*
 #logging.file.path=*
 
 spring.config.import= configserver:http://localhost:8090
+
+spring.codec.max-in-memory-size = 16777216
