Resilience Added to GetAllProducts

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -6,9 +6,19 @@ spring.servlet.multipart.max-request-size =-1
 info.app.name= Product Service
 info.app.version= 1.0
 
-
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
+management.health.circuitbreakers.enabled=true
+
+resilience4j.circuitbreaker.instances.productManagementServiceBreaker.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.productManagementServiceBreaker.eventConsumerBufferSize=10
+resilience4j.circuitbreaker.instances.productManagementServiceBreaker.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.productManagementServiceBreaker.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.productManagementServiceBreaker.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.productManagementServiceBreaker.waitDurationInOpenState=6s
+resilience4j.circuitbreaker.instances.productManagementServiceBreaker.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.productManagementServiceBreaker.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.productManagementServiceBreaker.slidingWindowType= COUNT_BASED
 
 #logging.file.name=product-service.log
 #logging.file.path=*
