--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -2,5 +2,5 @@ server.port=8761
 eureka.client.fetch-registry= false
 eureka.client.register-with-eureka= false
 
-logging.file.name=discovery-server.log
-logging.file.path=*
+#logging.file.name=discovery-server.log
+#logging.file.path=*
