--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -20,6 +20,9 @@ resilience4j.circuitbreaker.instances.productManagementServiceBreaker.permittedN
 resilience4j.circuitbreaker.instances.productManagementServiceBreaker.slidingWindowSize=10
 resilience4j.circuitbreaker.instances.productManagementServiceBreaker.slidingWindowType= COUNT_BASED
 
+resilience4j.retry.instances.productManagementServiceBreaker.max-attempts=3
+resilience4j.retry.instances.productManagementServiceBreaker.wait-duration=2s
+
 #logging.file.name=product-service.log
 #logging.file.path=*
 
