--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -20,6 +20,17 @@ resilience4j.circuitbreaker.instances.productManagementServiceBreaker.permittedN
 resilience4j.circuitbreaker.instances.productManagementServiceBreaker.slidingWindowSize=10
 resilience4j.circuitbreaker.instances.productManagementServiceBreaker.slidingWindowType= COUNT_BASED
 
+#resilience4j.circuitbreaker.instances.webScrapperServiceBreaker.registerHealthIndicator=true
+#resilience4j.circuitbreaker.instances.webScrapperServiceBreaker.eventConsumerBufferSize=10
+#resilience4j.circuitbreaker.instances.webScrapperServiceBreaker.failureRateThreshold=50
+#resilience4j.circuitbreaker.instances.webScrapperServiceBreaker.minimumNumberOfCalls=5
+#resilience4j.circuitbreaker.instances.webScrapperServiceBreaker.automaticTransitionFromOpenToHalfOpenEnabled=true
+#resilience4j.circuitbreaker.instances.webScrapperServiceBreaker.waitDurationInOpenState=6s
+#resilience4j.circuitbreaker.instances.webScrapperServiceBreaker.permittedNumberOfCallsInHalfOpenState=3
+#resilience4j.circuitbreaker.instances.webScrapperServiceBreaker.slidingWindowSize=10
+#resilience4j.circuitbreaker.instances.webScrapperServiceBreaker.slidingWindowType= COUNT_BASED
+
+
 resilience4j.retry.instances.productManagementServiceBreaker.max-attempts=3
 resilience4j.retry.instances.productManagementServiceBreaker.wait-duration=2s
 
