Microservices Secured with Auth0

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,15 +1,16 @@
+spring.config.import= configserver:http://localhost:8090
 spring.application.name= api-gateway
 server.port=8080
 
-#okta.oauth2.issuer= https://dev-10707109.okta.com/oauth2/default
-#okta.oauth2.audience= api://default
-#okta.oauth2.client-id= 0oaa8ps9evuc8azPp5d7
-#okta.oauth2.client-secret= C6gqQ1f4dWDC_P4gfe4soCq-u9p8NcaiToFr4m7K
-#okta.oauth2.scopes= openid,profile,email,offline_access
+
+#applicaion.audience: https://easyelectroshop.auth/
+#applicaion.client-origin-url: http://localhost:4040
 
 spring.cloud.gateway.routes[0].id = PRODUCT-SERVICE
 spring.cloud.gateway.routes[0].uri = lb://PRODUCT-SERVICE
 spring.cloud.gateway.routes[0].predicates[0] = Path=/api/v1/product/**
 
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-hb635mdqnobuyyhh.us.auth0.com/
+spring.security.oauth2.resourceserver.jwt.audience= https://easyelectroshop.auth/
 
-spring.config.import= configserver:http://localhost:8090
+spring.main.allow-bean-definition-overriding=true
