--- a/web-scrapping-service/pom.xml
+++ b/web-scrapping-service/pom.xml
@@ -72,6 +72,15 @@
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>com.okta.spring</groupId>
+        <artifactId>okta-spring-boot-starter</artifactId>
+        <version>3.0.4</version>
+    </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
