--- a/amazon-s3-service/pom.xml
+++ b/amazon-s3-service/pom.xml
@@ -65,6 +65,12 @@
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+
 
     </dependencies>
     <dependencyManagement>
