--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.security.oauth2.resourceserver.jwt.audience= https://nextapp.auth.com/
 
 spring.main.allow-bean-definition-overriding=true
 
-application.client-origin-url: http://localhost:4040
+#application.client-origin-url: http://localhost:3000/
 application.audience: https://nextapp.auth.com/
