--- a/customer-management-service/src/main/resources/application.properties
+++ b/customer-management-service/src/main/resources/application.properties
@@ -12,9 +12,8 @@ info.app.version= 1.0
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
 
-key = kURq9TNOqFPjcyxr
-initVector = VpSXS6+U08CQoJs5wMhOfKrD8cquDwx4kKxu8h444Xk=
-algo = AES/CBC/PKCS5PADDING
+encryptionKey = Ajt32WNmlnNl09ot
+encryptionCipher = AES
 
 #logging.file.name=customer-management-service.log
 #logging.file.path=*
