Additions to Customer Service

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.cloud.gateway.routes[0].id = PRODUCT-SERVICE
 spring.cloud.gateway.routes[0].uri = lb://PRODUCT-SERVICE
 spring.cloud.gateway.routes[0].predicates[0] = Path=/api/v1/product/**
 
+spring.cloud.gateway.routes[1].id = CUSTOMER-SERVICE
+spring.cloud.gateway.routes[1].uri = lb://CUSTOMER-SERVICE
+spring.cloud.gateway.routes[1].predicates[0] = Path=/api/v1/customer/**
+
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-0emfhw578yfcyd2f.eu.auth0.com/
 spring.security.oauth2.resourceserver.jwt.audience= https://nextapp.auth.com/
 
