API Gateway cors config

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -16,5 +16,9 @@ spring.security.oauth2.resourceserver.jwt.audience= https://nextapp.auth.com/
 
 spring.main.allow-bean-definition-overriding=true
 
+admin-application-url: http://localhost:3000
+customer-application-url: http://localhost:3001
+
+
 application.client-origin-url: http://localhost:3000
 application.audience: https://nextapp.auth.com/
