Order Service basics apis ready

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/order_service_database
+spring.datasource.username=root
+spring.datasource.password=DatabaseBackendDev0912
+spring.jpa.show-sql=true
+spring.application.name=order-service
+server.port= 8091
 
+info.app.name= Order Service
+info.app.version= 1.0
+
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+
+#logging.file.name=orderEntity-service.log
+#logging.file.path=*
+
+spring.config.import= configserver:http://localhost:8090
