--- a/customer-management-service/pom.xml
+++ b/customer-management-service/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>22.21.0-beta.1</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
