--- a/customer-service/pom.xml
+++ b/customer-service/pom.xml
@@ -63,6 +63,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-webflux</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>22.21.0-beta.1</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
