--- a/discovery-server/pom.xml
+++ b/discovery-server/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>22.21.0-beta.1</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
