--- a/product-color-management-service/pom.xml
+++ b/product-color-management-service/pom.xml
@@ -64,6 +64,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>22.21.0-beta.1</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
