Stripe Payment changes + API gateway access

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -11,6 +11,10 @@ spring.cloud.gateway.routes[1].id = CUSTOMER-SERVICE
 spring.cloud.gateway.routes[1].uri = lb://CUSTOMER-SERVICE
 spring.cloud.gateway.routes[1].predicates[0] = Path=/api/v1/customer/**
 
+spring.cloud.gateway.routes[2].id = STRIPE-PAYMENT-SERVICE
+spring.cloud.gateway.routes[2].uri = lb://STRIPE-PAYMENT-SERVICE
+spring.cloud.gateway.routes[2].predicates[0] = Path=/api/v1/stripe-service/**
+
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-0emfhw578yfcyd2f.eu.auth0.com/
 spring.security.oauth2.resourceserver.jwt.audience= https://nextapp.auth.com/
 
