Email structure changes

--- a/amazon-ses-service/src/main/resources/application.properties
+++ b/amazon-ses-service/src/main/resources/application.properties
@@ -15,9 +15,7 @@ cloud.aws.credentials.access-key= AKIAZZAPFME72M63KMDN
 cloud.aws.region.static= us-west-2
 cloud.aws.stack.auto= false
 
-# TESTING PURPOSES ONLY
-sender.email = mabdhyat896@gmail.com 
-
+sender.email = shehroze0912@gmail.com
 
 #logging.file.name=amazon-ses-service.log
 #logging.file.path=*
