Order Server Status Endpoint

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -12,6 +12,10 @@ info.app.version= 1.0
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=*
 
+#management.endpoints.web.cors.allowed-origins="*"
+
+
+
 #logging.file.name=orderEntity-service.log
 #logging.file.path=*
 
