--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -11,9 +11,13 @@ spring.cloud.gateway.routes[1].id = CUSTOMER-SERVICE
 spring.cloud.gateway.routes[1].uri = lb://CUSTOMER-SERVICE
 spring.cloud.gateway.routes[1].predicates[0] = Path=/api/v1/customer/**
 
-spring.cloud.gateway.routes[2].id = STRIPE-PAYMENT-SERVICE
-spring.cloud.gateway.routes[2].uri = lb://STRIPE-PAYMENT-SERVICE
-spring.cloud.gateway.routes[2].predicates[0] = Path=/api/v1/stripe-service/**
+spring.cloud.gateway.routes[2].id = ANALYTICS-SERVICE
+spring.cloud.gateway.routes[2].uri = lb://ANALYTICS-SERVICE
+spring.cloud.gateway.routes[2].predicates[0] = Path=/api/v1/analytics-service/**
+
+spring.cloud.gateway.routes[3].id = STRIPE-PAYMENT-SERVICE
+spring.cloud.gateway.routes[3].uri = lb://STRIPE-PAYMENT-SERVICE
+spring.cloud.gateway.routes[3].predicates[0] = Path=/api/v1/stripe-service/**
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-0emfhw578yfcyd2f.eu.auth0.com/
 spring.security.oauth2.resourceserver.jwt.audience= https://nextapp.auth.com/
@@ -22,7 +26,6 @@ spring.main.allow-bean-definition-overriding=true
 
 admin-application-url:http://localhost:3000
 customer-application-url:http://localhost:3001
-
 
 application.client-origin-url: http://localhost:3000
 application.audience: https://nextapp.auth.com/
