Order Tracking Service Complete

--- a/order-tracking-service/src/main/resources/application.properties
+++ b/order-tracking-service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.config.import= configserver:http://localhost:8090
 
 spring.application.name= order-tracking-service
-server.port=8094
+server.port=8095
 
-tcs-url= https://www.tcsexpress.com/track
+leopard-url= https://www.leopardscourier.com/leopards-tracking
 
 info.app.name= Order Tracking Service
 info.app.version= 1.0
