--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -2,7 +2,6 @@ spring.config.import= configserver:http://localhost:8090
 spring.application.name= api-gateway
 server.port=8080
 
-
 spring.cloud.gateway.routes[0].id = PRODUCT-SERVICE
 spring.cloud.gateway.routes[0].uri = lb://PRODUCT-SERVICE
 spring.cloud.gateway.routes[0].predicates[0] = Path=/api/v1/product/**
@@ -25,6 +24,7 @@ spring.security.oauth2.resourceserver.jwt.audience= https://nextapp.auth.com/
 spring.main.allow-bean-definition-overriding=true
 
 admin-application-url:http://localhost:3000
+#customer-application-url:http://192.168.18.138:3001
 customer-application-url:http://localhost:3001
 
 application.client-origin-url: http://localhost:3000
