--- a/order-tracking-service/pom.xml
+++ b/order-tracking-service/pom.xml
@@ -74,6 +74,13 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.assertthat/selenium-shutterbug -->
+        <dependency>
+            <groupId>com.assertthat</groupId>
+            <artifactId>selenium-shutterbug</artifactId>
+            <version>1.6</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
