Amazon SES now sends HTML

--- a/amazon-ses-service/src/main/resources/application.properties
+++ b/amazon-ses-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8093
+
 spring.application.name= amazon-ses-service
 
 info.app.name= AMAZON SES Service
@@ -10,12 +11,19 @@ management.endpoints.web.exposure.include=*
 
 spring.config.import= configserver:http://localhost:8090
 
-cloud.aws.credentials.secret-key= hw6X0vIQBiDGn62cfuEwVYCn/OT/tLLvTUEU0evL
-cloud.aws.credentials.access-key= AKIAZZAPFME72M63KMDN
-cloud.aws.region.static= us-west-2
-cloud.aws.stack.auto= false
-
-sender.email = shehroze0912@gmail.com
 
 #logging.file.name=amazon-ses-service.log
 #logging.file.path=*
+
+fromEmail = shehroze0912@gmail.com
+fromName = EASY ELECTRO SHOP
+
+spring.mail.host=email-smtp.us-west-2.amazonaws.com
+spring.mail.port=2587
+spring.mail.username=AKIAZZAPFME7YP2C6CAN
+spring.mail.password=BPHf3cfzUhSAx+lm3qIaVHsisoNU8oD1cjXMn0bROtmM
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.port=2587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
