--- a/chatbot-data-retrieving-service/src/main/resources/application.properties
+++ b/chatbot-data-retrieving-service/src/main/resources/application.properties
@@ -9,3 +9,5 @@ management.endpoints.web.exposure.include=*
 
 #logging.file.name=chatbot-data-retrieving-service.log
 #logging.file.path=*
+
+spring.config.import= configserver:http://localhost:8090
