Additions to Analytics Service

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -21,8 +21,10 @@ spring.cloud.gateway.routes[3].predicates[0] = Path=/api/v1/stripe-service/**
 spring.main.allow-bean-definition-overriding=true
 
 admin-application-url:http://localhost:3000
-#customer-application-url-test:http://192.168.18.138:3001
 customer-application-url:http://localhost:3001
+
+customer-application-url-external:http://192.168.18.138:3001
+admin-application-url-external:http://192.168.18.138:3000
 
 application.client-origin-url: http://localhost:3000
 application.audience: https://nextapp.auth.com/
