All Analytics added

--- a/analytics-service/src/main/resources/application.properties
+++ b/analytics-service/src/main/resources/application.properties
@@ -2,6 +2,12 @@ spring.config.import= configserver:http://localhost:8090
 spring.application.name=analytics-service
 server.port=8094
 
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/analytics_service_database
+spring.datasource.username=root
+spring.datasource.password=DatabaseBackendDev0912
+spring.jpa.show-sql=true
+
 info.app.name= Analytics Service
 info.app.version= 1.0
 
