--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -18,6 +18,10 @@ spring.cloud.gateway.routes[3].id = STRIPE-PAYMENT-SERVICE
 spring.cloud.gateway.routes[3].uri = lb://STRIPE-PAYMENT-SERVICE
 spring.cloud.gateway.routes[3].predicates[0] = Path=/api/v1/stripe-service/**
 
+spring.cloud.gateway.routes[4].id = STOCK-RECOMMENDATION-SERVICE
+spring.cloud.gateway.routes[4].uri = lb://STOCK-RECOMMENDATION-SERVICE
+spring.cloud.gateway.routes[4].predicates[0] = Path=/api/v1/stock-recommendation-service/**
+
 spring.main.allow-bean-definition-overriding=true
 
 admin-application-url:http://localhost:3000
