--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -22,6 +22,10 @@ spring.cloud.gateway.routes[4].id = STOCK-RECOMMENDATION-SERVICE
 spring.cloud.gateway.routes[4].uri = lb://STOCK-RECOMMENDATION-SERVICE
 spring.cloud.gateway.routes[4].predicates[0] = Path=/api/v1/stock-recommendation-service/**
 
+spring.cloud.gateway.routes[5].id = RATING-SERVICE
+spring.cloud.gateway.routes[5].uri = lb://RATING-SERVICE
+spring.cloud.gateway.routes[5].predicates[0] = Path=/api/v1/rating-service/**
+
 spring.main.allow-bean-definition-overriding=true
 
 admin-application-url:http://localhost:3000
