Order Tracker fixed, Chat is now persistant

--- a/chat-service/src/main/resources/application.properties
+++ b/chat-service/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 server.port=7070
 spring.application.name= chat-service
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/chat_database
+spring.datasource.username=root
+spring.datasource.password=DatabaseBackendDev0912
+spring.jpa.show-sql=true
